DigicielFull/force-app/main/default/objects/Post_Chat_Survey__c/Post_Chat_Survey__c.object-meta.xml
<CustomObject>
    <description>This object is ties to the Diaspora website and records the survey results input after a Live Agent session has ended</description>
    <label>Post Chat Survey</label>
    <nameField>
        <displayFormat>PCS-{000000000}</displayFormat>
        <label>Post Chat Survey Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Post Chat Surveys</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>