DigicielFull/force-app/main/default/objects/Post_Chat_Survey__c/fields/Comments_for_Query_not_resolved__c.field-meta.xml
<CustomField>
    <fullName>Comments_for_Query_not_resolved__c</fullName>
    <label>Comments for Query not resolved</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>