DigicielFull/force-app/main/default/objects/Post_Chat_Survey__c/fields/Please_rate_your_customer_experience__c.field-meta.xml
<CustomField>
    <fullName>Please_rate_your_customer_experience__c</fullName>
    <label>Please rate your customer experience:</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>- No Response -</fullName>
            </value>
            <value>
                <fullName>Excellent</fullName>
            </value>
            <value>
                <fullName>Very Good</fullName>
            </value>
            <value>
                <fullName>Good</fullName>
            </value>
            <value>
                <fullName>Fair</fullName>
            </value>
            <value>
                <fullName>Poor</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>